# PlotJuggler

./: CHANGELOG.rst  CMakeLists.txt  package.xml
plotjuggler_app/: CMakeLists.txt  curvelist_panel.cpp  curvetree_view.cpp  curvetree_view.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nlohmann_parsers.h  plotwidget.cpp  tree_completer.h
plotjuggler_app/opengl/: car_model.cpp  car_model.h  glwidget.cpp  glwidget.h  htmltableparser.cpp  htmltableparser.h  kalmanfilter.cpp  kalmanfilter.h
plotjuggler_app/transforms/: function_editor.cpp  lua_custom_function.h
plotjuggler_base/include/PlotJuggler/: dataloader_base.h  plotdata.h  plotdatabase.h
plotjuggler_plugins/DataLoadCSV/: dataload_csv.cpp  dataload_csv.h  dataload_csv.ui
plotjuggler_plugins/DataLoadMCAP/: dataload_mcap.cpp
plotjuggler_plugins/DataStreamUDP/: udp_server.cpp
plotjuggler_plugins/ParserLineInflux/: CMakeLists.txt  line_parser.cpp  line_parser.h  sample_telegraf.conf
plotjuggler_plugins/ParserROS/: CMakeLists.txt
plotjuggler_plugins/PluginsZcm/: dataload_zcm.cpp
snap_core22/: snapcraft.yaml
